<resources>
    <string name="app_name">AjolPaper</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_modify">Modify</string>
    <string name="no_name">No Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="choose">Choose picture</string>
    <string name="radius">Radius</string>
</resources>
