<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WallpaperListActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/list_item">

    <ImageView
        android:id="@+id/photo_preview_list"
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noimage" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/photo_preview_list"
        app:layout_constraintRight_toLeftOf="@id/delete_button"
        app:layout_constraintBottom_toTopOf="@id/label_divider"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/no_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <TextView
        android:id="@+id/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/photo_preview_list"
        app:layout_constraintRight_toLeftOf="@id/delete_button"
        app:layout_constraintTop_toBottomOf="@id/label_divider"
        android:layout_centerInParent="true"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/radius"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/photo_preview_list"
        app:layout_constraintTop_toTopOf="@id/photo_preview_list"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:focusable="false"
        android:text="@string/delete" />

    <Space
        android:id="@+id/label_divider"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/photo_preview_list"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toEndOf="@+id/photo_preview_list"
        app:layout_constraintTop_toTopOf="@+id/photo_preview_list" />
</android.support.constraint.ConstraintLayout>